--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	text-align: center;
-   
+	
 }
-
 
 header {
 	box-sizing: border-box;
@@ -30,8 +29,9 @@ header {
 	width: 100vw;
 	text-align: center;
 	text-transform: uppercase;
-	text-shadow: 0px 0px 20px rgb(255 255 255);
+	text-shadow: 0 0 20px #fff;
 }
+
 header h1 {
 	margin: 0;
 	position: absolute;
@@ -39,10 +39,8 @@ header h1 {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
-header,header:before {
-	background: 50% 50% / cover;
-}
-header::before {
+
+header:before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -50,22 +48,24 @@ header::before {
 	right: 0;
 	bottom: 0;
 	display: block;
-	background: url(./4.jpg);
-	background-size: cover;
+	background: url(./4.jpg) 50% 50% / cover;
 	transform-origin: center center 0;
 	transform: translateZ(-1px) scale(2);
 	z-index: -1;
 	min-height: 100vh;
 }
+
 .container {
 	z-index: 2;
 	position: absolute;
 	top: 100vh;
 	background: black;
-    background-size: 100vh;
-	line-height: 30px;
-    line-width: 100vh
+	background-size: cover;
+	border: 2px solid rgb(75, 70, 74);
+	border-radius: .5em;
+	padding: 200px;
+	column-width: 30em;
+	column-rule: 1px solid rgb(75, 70, 74);
 	font-weight: lighter;
-	padding: 40px;
 	color: grey;
 }
